# match

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: tools.md
docs/lgpd/: LIA.md
docs/superpowers/specs/: 2026-05-21-brasil-mcp-match-design.md
server/: CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
server/docs/lgpd/: DPA-template.md
server/src/brasil_mcp_match_server/: __init__.py
server/src/brasil_mcp_match_server/adapters/mcp/: server.py  tools.py
server/src/brasil_mcp_match_server/adapters/rest/: app.py  dependencies.py  routes_internal.py  routes_lgpd.py  routes_match.py  routes_signup.py  routes_socio.py  routes_webhooks.py
server/src/brasil_mcp_match_server/core/: errors.py
server/src/brasil_mcp_match_server/core/auth/: api_key.py  api_key_repo.py
server/src/brasil_mcp_match_server/core/billing/: __init__.py  asaas.py
server/src/brasil_mcp_match_server/core/ingestion/: loader.py  manifest.py  parser.py  refresh_job.py  schema.sql
server/src/brasil_mcp_match_server/core/lgpd/: opt_out.py
server/src/brasil_mcp_match_server/core/matching/: localizacao.py  razao_social.py  socio.py
server/src/brasil_mcp_match_server/core/notifications/: __init__.py  brevo.py
server/src/brasil_mcp_match_server/core/repository/: cnpj_repo.py  connection.py  postgres_repo.py
server/src/brasil_mcp_match_server/core/signup/: __init__.py  models.py  repo.py  service.py
server/tests/adapters/: conftest.py  test_app_extras.py  test_mcp_tools.py  test_rest_internal.py  test_rest_lgpd.py  test_rest_routes.py  test_rest_signup.py  test_rest_socio.py  test_rest_webhooks.py
server/tests/core/audit/: test_log.py
server/tests/core/auth/: test_api_key.py
server/tests/core/billing/: test_asaas.py
server/tests/core/ingestion/: test_downloader.py  test_loader.py  test_manifest.py  test_parser.py  test_refresh_job.py
server/tests/core/lgpd/: test_opt_out.py
server/tests/core/matching/: test_localizacao.py  test_porte.py  test_razao_social.py  test_situacao.py  test_socio.py
server/tests/core/notifications/: test_brevo.py
server/tests/core/repository/: test_connection.py  test_postgres_repo.py  test_socio_repo.py  test_top_level_api.py
server/tests/core/signup/: test_postgres_repo.py  test_service.py
server/tests/security/: conftest.py  test_adversarial_inputs.py  test_opt_out_blocking.py  test_privacy_contracts.py  test_rate_limit_isolation.py  test_rbac_audit_isolation.py  test_sql_injection_resistance.py
src/brasil_mcp_match/: __init__.py  __main__.py  client.py  server.py
src/brasil_mcp_match/adapters/mcp/: server.py  tools.py
src/brasil_mcp_match/adapters/rest/: app.py  dependencies.py  routes_internal.py  routes_lgpd.py  routes_match.py
src/brasil_mcp_match/core/: errors.py
src/brasil_mcp_match/core/audit/: log.py
src/brasil_mcp_match/core/auth/: api_key.py  plan.py
src/brasil_mcp_match/core/ingestion/: downloader.py  loader.py  manifest.py  refresh_job.py
src/brasil_mcp_match/core/matching/: porte.py  situacao.py
src/brasil_mcp_match/core/repository/: cnpj_repo.py  connection.py  postgres_repo.py
tests/: test_client.py  test_server.py
tests/adapters/: conftest.py  test_app_extras.py  test_mcp_tools.py  test_rest_internal.py  test_rest_lgpd.py  test_rest_routes.py
tests/core/audit/: test_log.py
tests/core/auth/: test_api_key.py
tests/core/ingestion/: test_downloader.py  test_loader.py  test_manifest.py  test_parser.py  test_refresh_job.py
tests/core/lgpd/: test_opt_out.py
tests/core/matching/: test_localizacao.py  test_porte.py  test_razao_social.py  test_situacao.py
tests/core/repository/: test_connection.py  test_postgres_repo.py  test_top_level_api.py
tests/security/: test_adversarial_inputs.py  test_opt_out_blocking.py  test_privacy_contracts.py  test_rate_limit_isolation.py  test_rbac_audit_isolation.py  test_sql_injection_resistance.py
