[project]
name = "brasil-mcp-match"
version = "0.2.1"
description = "Verificação privacy-preserving contra base Receita Federal. Match, don't reveal."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Brasil MCP" }]
requires-python = ">=3.11"
keywords = ["mcp", "brasil", "cnpj", "kyc", "compliance", "receita-federal", "lgpd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "rapidfuzz>=3.10",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
telemetry = ["posthog>=3.5"]

[project.urls]
Homepage = "https://github.com/brasil-mcp/match"
Repository = "https://github.com/brasil-mcp/match"
Issues = "https://github.com/brasil-mcp/match/issues"

[project.scripts]
brasil-mcp-match = "brasil_mcp_match.adapters.rest.app:cli"
brasil-mcp-match-server = "brasil_mcp_match.adapters.mcp.server:main"
brasil-mcp-match-ingest = "brasil_mcp_match.core.ingestion.refresh_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brasil_mcp_match"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "httpx>=0.27",        # FastAPI test client
    "testcontainers[postgres]>=4.8",  # real postgres in tests
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring Postgres",
]

[tool.coverage.run]
source = ["src/brasil_mcp_match"]
branch = true
