[project]
name = "brasil-mcp-match"
version = "0.5.0"
description = "MCP stdio client for the Brasil MCP Match REST API. Privacy-preserving CNPJ verification (KYC, anti-fraud, LGPD) from your Claude Desktop / Claude Code."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brasil MCP" }]
requires-python = ">=3.11"
keywords = ["mcp", "brasil", "cnpj", "kyc", "lgpd", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/brasil-mcp/match"
Repository = "https://github.com/brasil-mcp/match"
Issues = "https://github.com/brasil-mcp/match/issues"

[project.scripts]
brasil-mcp-match = "brasil_mcp_match.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brasil_mcp_match"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/brasil_mcp_match"]
branch = true
omit = ["src/brasil_mcp_match/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
# E501 ignored: MCP tool docstrings must be single-line for the schema.
ignore = ["E501"]

[tool.pyright]
include = ["src"]
strict = ["src"]
pythonVersion = "3.11"
